# ortts

./: .gitignore  Cargo.toml  Dockerfile  Justfile  README.md  bacon.toml  clippy.toml  cspell.config.yaml  flake.nix
.github/workflows/: release-docker.yml  release.yml
crates/backend_chatterbox_multilingual/: Cargo.toml  README.md
crates/backend_chatterbox_multilingual/src/utils/: chinese_cangjie_converter.rs  inference.rs  mod.rs  validate_language_id.rs
crates/backend_chatterbox_turbo/: Cargo.toml
crates/backend_chatterbox_turbo/src/: lib.rs
crates/backend_chatterbox_turbo/src/utils/: inference.rs
crates/backend_kokoro/: Cargo.toml  README.md
crates/backend_kokoro/src/: lib.rs
crates/backend_kokoro/src/utils/: inference.rs  mod.rs  tokenizer.rs
crates/backend_kokoro/src/utils/phonemize/: escape_reg_exp.rs  flip_money.rs  mod.rs  normalize_text.rs  point_num.rs  split.rs  split_num.rs
crates/model_chatterbox_multilingual/: Cargo.toml  README.md
crates/model_chatterbox_multilingual/src/: download.rs  lib.rs
crates/model_chatterbox_multilingual/src/routes/: speech.rs
crates/model_chatterbox_multilingual/src/utils/: chinese_cangjie_converter.rs  create_session.rs  hiragana_normalize.rs  inference.rs  language_preparer.rs  load_audio.rs  mod.rs  repetition_penalty_logits_processor.rs  validate_language_id.rs
crates/onnx/: Cargo.toml
crates/onnx/src/: inference_session.rs
crates/server/: Cargo.toml
crates/server/src/: lib.rs  openapi.rs
crates/server/src/routes/: mod.rs  not_found.rs  openapi_json.rs
crates/server/src/routes/api/: speech.rs
crates/shared/: Cargo.toml
crates/shared/src/: downloader.rs  error.rs  lib.rs  speech.rs
crates/shared_chatterbox/: Cargo.toml
crates/shared_chatterbox/src/: lib.rs  load_audio.rs  repetition_penalty_logits_processor.rs  resample_audio.rs
src/: cli.rs  main.rs
src/commands/: list.rs  mod.rs  remove.rs  serve.rs
src/utils/: available_model.rs  dir_size.rs  mod.rs
