[workspace.package]
version = "0.1.0"
authors = ["Moeru AI"]
edition = "2024"
rust-version = "1.89"
description = ""
documentation = "https://ortts.moeru.ai"
readme = "README.md"
homepage = "https://ortts.moeru.ai"
repository = "https://github.com/moeru-ai/ortts"
license = "MIT"
publish = false

[package]
name = "ortts"
version.workspace = true
edition.workspace = true
publish.workspace = true
readme.workspace = true
license.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
clap = { version = "4.5", features = ["derive"]}
human-panic = "2.0.3"
tokio = { version = "1.48", features = ["full"] }
