[workspace.package]
version = "0.1.0-beta.4"
authors = ["Moeru AI"]
edition = "2024"
rust-version = "1.89"
description = "Simple and Easy-to-use local TTS inference server, Powered by ONNX Runtime"
documentation = "https://ortts.moeru.ai"
readme = "README.md"
homepage = "https://ortts.moeru.ai"
repository = "https://github.com/moeru-ai/ortts"
license = "MIT"
publish = false

[package]
name = "ortts"
version.workspace = true
edition.workspace = true
publish.workspace = true
readme.workspace = true
license.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true


[workspace]
members = [
  ".",
  "./crates/backend_chatterbox_multilingual",
  # "./crates/backend_chatterbox_turbo",
  "./crates/backend_kokoro",
  "./crates/onnx",
  "./crates/server",
  "./crates/shared",
  "./crates/shared_chatterbox",
]

[workspace.dependencies]
ortts_backend_chatterbox_multilingual.path = "./crates/backend_chatterbox_multilingual"
# ortts_backend_chatterbox_turbo.path = "./crates/backend_chatterbox_turbo"
ortts_backend_kokoro.path = "./crates/backend_kokoro"
ortts_onnx.path = "./crates/onnx"
ortts_server.path = "./crates/server"
ortts_shared.path = "./crates/shared"
ortts_shared_chatterbox.path = "./crates/shared_chatterbox"
anyhow = "1.0"
axum = { version = "0.8", features = ["tokio", "macros"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
futures = "0.3.31"
headers = "0.4.1"
# TODO: rustls-tls
# https://github.com/pykeio/ort/issues/436
hf-hub = { version = "0.4", default-features = false, features = [
  "tokio",
  "native-tls",
] }
jieba-rs = "0.8.1"
kakasi = "0.1.0"
ndarray = "0.17.2"
# TODO: tls-rustls
# https://github.com/pykeio/ort/issues/436
# TODO: add EP features
# https://ort.pyke.io/setup/cargo-features#execution-providers
ort = { version = "=2.0.0-rc.11", features = [
  "ndarray",
  "half",
  # "cuda",
  # "coreml",
  # "directml",
  # "webgpu",
] }
half = "2.4"
hound = "3.5"
regex = "1.12.2"
rubato = "0.16"
serde = "1.0"
serde_json = "1.0"
symphonia = "0.5"
tokenizers = { version = "0.22.1", features = ["hf-hub", "http"] }
tokio = { version = "1.48", features = ["full"] }
tracing = "0.1"
tracing-test = "0.2"
unicode-general-category = "1.1"
unicode-normalization = "0.1"
utoipa = { version = "5.4", features = ["axum_extras"] }
utoipa-axum = "0.2"
utoipa-scalar = { version = "0.3", features = ["axum"] }

[dependencies]
ortts_onnx.workspace = true
ortts_server.workspace = true
ortts_shared.workspace = true
anyhow.workspace = true
axum.workspace = true
axum-extra.workspace = true
clap = { version = "4.5", features = ["derive"] }
comfy-table = "7.2.2"
hf-hub.workspace = true
human-panic = "2.0"
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber = "0.3"
walkdir = "2.5.0"
humansize = "2.1.3"
chrono = "0.4.43"
chrono-humanize = "0.2.3"
strum = { version = "0.27.2", features = ["derive"] }

[target.'cfg(target_os = "linux")'.dependencies]
ortts_onnx = { workspace = true, features = ["ep_cuda"] }

# TODO: enable this
# [target.'cfg(target_os = "macos")'.dependencies]
# ortts_onnx = { workspace = true, features = ["ep_coreml"] }

[target.'cfg(target_os = "windows")'.dependencies]
ortts_onnx = { workspace = true, features = ["ep_directml"] }

[features]
default = []
ep_cuda = ["ortts_onnx/ep_cuda"]
ep_coreml = ["ortts_onnx/ep_coreml"]
ep_directml = ["ortts_onnx/ep_directml"]
ep_webgpu = ["ortts_onnx/ep_webgpu"]
