[package]
name = "ortts_backend_chatterbox_multilingual"
version.workspace = true
edition.workspace = true
publish.workspace = true
readme.workspace = true
license.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true

[lib]
name = "ortts_backend_chatterbox_multilingual"
path = "src/lib.rs"

[dependencies]
ortts_onnx.workspace = true
ortts_shared.workspace = true
ortts_shared_chatterbox.workspace = true
anyhow.workspace = true
half.workspace = true
hound.workspace = true
jieba-rs.workspace = true
kakasi.workspace = true
ndarray.workspace = true
ort.workspace = true
serde.workspace = true
serde_json.workspace = true
tokenizers.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-test.workspace = true
unicode-general-category.workspace = true
unicode-normalization.workspace = true
