[package]
name = "ortts_model_chatterbox_multilingual"
version.workspace = true
edition.workspace = true
publish.workspace = true
readme.workspace = true
license.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true

[lib]
name = "ortts_model_chatterbox_multilingual"
path = "src/lib.rs"

[dependencies]
ortts_shared = { workspace = true }
anyhow = { workspace = true }
axum = { workspace = true }
hf-hub = { workspace = true }
ort = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
utoipa = { workspace = true }
