[package]
name = "ortts_onnx"
version.workspace = true
edition.workspace = true
publish.workspace = true
readme.workspace = true
license.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true

[lib]
name = "ortts_onnx"
path = "src/lib.rs"

[dependencies]
half.workspace = true
ndarray.workspace = true
num_cpus = "1.17"
ortts_shared.workspace = true
ort.workspace = true
tracing.workspace = true

[features]
default = []
ep_cuda = ["ort/cuda"]
ep_coreml = ["ort/coreml"]
ep_directml = ["ort/directml"]
ep_webgpu = ["ort/webgpu"]
