[package]
name = "ortts_server"
version.workspace = true
edition.workspace = true
publish.workspace = true
readme.workspace = true
license.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true

[lib]
name = "ortts_server"
path = "src/lib.rs"

[dependencies]
ortts_backend_chatterbox_multilingual.workspace = true
ortts_shared.workspace = true
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
utoipa.workspace = true
utoipa-axum.workspace = true
utoipa-scalar.workspace = true

[features]
default = ["ep_cpu"]
ep_cpu = ["ortts_backend_chatterbox_multilingual/ep_cpu"]
ep_cuda = ["ortts_backend_chatterbox_multilingual/ep_cuda"]
ep_coreml = ["ortts_backend_chatterbox_multilingual/ep_coreml"]
ep_directml = ["ortts_backend_chatterbox_multilingual/ep_directml"]
ep_webgpu = ["ortts_backend_chatterbox_multilingual/ep_webgpu"]
